kubernetes/microblog/ingress.yml
# ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microblog
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
        - ampheris.me
      secretName: demo-tls
  rules:
    - host: ampheris.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: microblog
                port:
                  number: 5000
